# rivian-tui

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE
docs/: RIVIAN_API.md
src/: app.rs  config.rs  db.rs  main.rs  mqtt.rs  tui.rs  view_model.rs  web.rs
src/api/: auth.rs  client.rs  mod.rs  queries.rs  types.rs
