[package]
name = "rivian-tui"
version = "0.1.0"
edition = "2021"
description = "A terminal UI dashboard for Rivian vehicles"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = "3"
rumqttc = "0.24"
axum = "0.7"
